@@ -1,5 +1,9 @@
 2002-05-07  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* cavity.cpp: Check for presence of gain medium.
+
+2002-05-07  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* expression.cpp: Detect bad expressions.
 	* stack.cpp: Ditto.
 
